# hyper-accelerator

./: Cargo.toml
examples/: echo_body.rs  file-from-memory.rs  filestream.rs  hello.rs  json.rs  json_rersponse.rs  middlewares.rs  multipart_form_data_request.rs  routing.rs
src/: application_context_trait.rs  body.rs  body_ext.rs  body_utils.rs  content_type.rs  cookies.rs  filestream.rs  lib.rs  request_context_trait.rs  request_handler.rs  response.rs  response_body.rs  routing.rs  server.rs  tests.rs
src/body_ext/: collect.rs  frame_iter.rs  mod.rs
src/decorators/: debug_log_cookies.rs  debug_log_headers.rs  debug_log_request_line.rs  httponly_header_authorization.rs  mod.rs
